--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
+    android:padding="16dp"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/author_vw"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="@string/nmedia"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/date"
+        app:layout_constraintEnd_toStartOf="@id/author_btn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="01.01.2022"
+        app:layout_constraintStart_toStartOf="@id/author_vw"
+        app:layout_constraintTop_toBottomOf="@id/author_vw"
+        app:layout_constraintBottom_toBottomOf="@id/avatar"/>
+
+    <ImageButton
+        android:id="@+id/author_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/author_vw"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_options_24"
+    />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="avatar, author_btn, date"
+    />
+
+    <TextView
+        android:id="@+id/content_vw"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/barrier1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:text="@tools:sample/lorem/random"
+        android:paddingBottom="16dp"
+    />
+
+    <ImageButton
+        android:id="@+id/favorite_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_vw"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_favorite_24"
+        />
+
+    <TextView
+        android:id="@+id/fav_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="0"
+        app:layout_constraintStart_toEndOf="@id/favorite_btn"
+        app:layout_constraintTop_toBottomOf="@id/content_vw"
+        android:layout_marginStart="8dp"
+    />
+
+    <ImageButton
+        android:id="@+id/share_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/fav_count"
+        app:layout_constraintTop_toBottomOf="@id/content_vw"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_share_24"
+        android:layout_marginStart="16dp"
+        />
+
+    <TextView
+        android:id="@+id/share_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="0"
+        app:layout_constraintStart_toEndOf="@id/share_btn"
+        app:layout_constraintTop_toBottomOf="@id/content_vw"
+        android:layout_marginStart="8dp"
+        />
+
+    <ImageButton
+        android:id="@+id/viewed_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/viewed_count"
+        app:layout_constraintTop_toBottomOf="@id/content_vw"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_share_24"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        />
+
+    <TextView
+        android:id="@+id/viewed_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_vw"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
