--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -47,6 +47,7 @@
         android:id="@+id/menuButton"
         android:layout_width="@dimen/avatar_view_size"
         android:layout_height="@dimen/avatar_view_size"
+        android:layout_marginEnd="@dimen/small_common_spacing"
         android:background="@android:color/transparent"
         android:contentDescription="@string/menu_button"
         app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
@@ -65,7 +66,7 @@
     <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="299dp"
         android:layout_marginStart="@dimen/big_common_spacing"
         android:layout_marginEnd="@dimen/big_common_spacing"
         android:justificationMode="inter_word"
@@ -107,9 +108,10 @@
         android:id="@+id/shareButton"
         android:layout_width="@dimen/avatar_view_size"
         android:layout_height="@dimen/avatar_view_size"
+        android:layout_marginStart="32dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/share_button"
-        app:layout_constraintStart_toEndOf="@id/likesCount"
+        app:layout_constraintStart_toEndOf="@id/likesButton"
         app:layout_constraintTop_toBottomOf="@id/message"
         app:srcCompat="@drawable/ic_baseline_share_24" />
 
@@ -117,7 +119,6 @@
         android:id="@+id/shareCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@id/shareButton"
         app:layout_constraintStart_toEndOf="@id/shareButton"
@@ -137,7 +138,6 @@
         android:id="@+id/viewsCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@id/views"
         app:layout_constraintEnd_toEndOf="@id/message"
