--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,143 +4,150 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/big_common_spacing"
+    android:padding="@dimen/common_spacing"
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/avatarImageView"
-        android:layout_width="@dimen/avatar_view_size"
-        android:layout_height="@dimen/avatar_view_size"
-        android:layout_marginStart="@dimen/big_common_spacing"
+        android:id="@+id/avatar"
+        android:layout_width="@dimen/posts_avatar_size"
+        android:layout_height="@dimen/posts_avatar_size"
+        android:layout_marginBottom="@dimen/common_spacing"
         android:contentDescription="@string/avatar_description"
+        android:src="@drawable/ic_launcher_foreground"
+        app:layout_constraintBottom_toBottomOf="@id/barrier"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars[2]" />
+        tools:srcCompat="@sample/posts.json/data/authorAvatar" />
 
     <TextView
-        android:id="@+id/postHeader"
+        android:id="@+id/author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/big_common_spacing"
+        android:layout_marginStart="@dimen/common_spacing"
+        android:layout_marginEnd="@dimen/common_spacing"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="@string/post_header"
-        app:layout_constraintBottom_toTopOf="@id/postDate"
-        app:layout_constraintEnd_toStartOf="@id/menuButton"
-        app:layout_constraintStart_toEndOf="@id/avatarImageView"
-        app:layout_constraintTop_toTopOf="@id/avatarImageView"
-        app:layout_constraintVertical_chainStyle="spread" />
+        app:layout_constraintBottom_toTopOf="@id/published"
+        app:layout_constraintEnd_toStartOf="@id/menu"
+        app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="@sample/posts.json/data/author" />
 
     <TextView
-        android:id="@+id/postDate"
+        android:id="@+id/published"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="@string/post_date"
-        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
-        app:layout_constraintEnd_toEndOf="@id/postHeader"
-        app:layout_constraintStart_toStartOf="@id/postHeader"
-        app:layout_constraintTop_toBottomOf="@id/postHeader" />
+        android:layout_marginStart="@dimen/common_spacing"
+        android:layout_marginEnd="@dimen/common_spacing"
+        android:layout_marginBottom="@dimen/common_spacing"
+        app:layout_constraintBottom_toBottomOf="@id/barrier"
+        app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintEnd_toStartOf="@id/menu"
+        app:layout_constraintTop_toBottomOf="@id/author"
+        tools:text="@sample/posts.json/data/published" />
 
     <ImageButton
-        android:id="@+id/menuButton"
-        android:layout_width="@dimen/avatar_view_size"
-        android:layout_height="@dimen/avatar_view_size"
+        android:id="@+id/menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:contentDescription="@string/menu_button"
-        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
+        android:contentDescription="@string/description_post_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/avatarImageView"
-        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_options_24dp"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrierBottomPostHeader"
+        android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:barrierMargin="@dimen/big_common_spacing"
-        app:constraint_referenced_ids="avatarImageView, postDate, menuButton" />
+        app:constraint_referenced_ids="avatar,published,menu" />
 
     <TextView
-        android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginStart="@dimen/big_common_spacing"
-        android:layout_marginEnd="@dimen/big_common_spacing"
-        android:justificationMode="inter_word"
-        app:layout_constraintTop_toTopOf="@id/barrierBottomPostHeader"
-        app:layout_constraintVertical_chainStyle="spread"
-        tools:text="@tools:sample/lorem/random" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrierBottomMessage"
-        android:layout_width="wrap_content"
+        android:id="@+id/content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="message"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="80dp" />
-
-    <ImageButton
-        android:id="@+id/likesButton"
-        android:layout_width="@dimen/avatar_view_size"
-        android:layout_height="@dimen/avatar_view_size"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/like_button"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:autoLink="web"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/message"
-        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
+        app:layout_constraintTop_toBottomOf="@id/barrier"
+        tools:text="@sample/posts.json/data/content" />
 
-    <TextView
-        android:id="@+id/likesCount"
-        android:layout_width="32dp"
-        android:layout_height="wrap_content"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="@id/likesButton"
-        app:layout_constraintStart_toEndOf="@id/likesButton"
-        app:layout_constraintTop_toTopOf="@id/likesButton"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="111dp" />
-
-    <ImageButton
-        android:id="@+id/shareButton"
-        android:layout_width="@dimen/avatar_view_size"
-        android:layout_height="@dimen/avatar_view_size"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/share_button"
-        app:layout_constraintStart_toEndOf="@id/likesCount"
-        app:layout_constraintTop_toBottomOf="@id/message"
-        app:srcCompat="@drawable/ic_baseline_share_24" />
-
-    <TextView
-        android:id="@+id/shareCount"
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/content_barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="@id/shareButton"
-        app:layout_constraintStart_toEndOf="@id/shareButton"
-        app:layout_constraintTop_toTopOf="@id/shareButton" />
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="content" />
+
+    <ImageButton
+        android:id="@+id/likes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/description_likes"
+        android:src="@drawable/ic_baseline_favorite_border_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_barrier"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/amount_of_likes"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_spacing_8dp"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintStart_toEndOf="@id/likes"
+        app:layout_constraintTop_toBottomOf="@id/content_barrier"
+        tools:text="@sample/posts.json/data/likes" />
+
+    <ImageButton
+        android:id="@+id/shares"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_spacing"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/description_shares"
+        android:src="@drawable/ic_baseline_share_24"
+        app:layout_constraintStart_toEndOf="@id/amount_of_likes"
+        app:layout_constraintTop_toBottomOf="@id/content_barrier"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/amount_of_shares"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_spacing_8dp"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintStart_toEndOf="@id/shares"
+        app:layout_constraintTop_toBottomOf="@id/content_barrier"
+        tools:text="@sample/posts.json/data/share" />
+
+    <TextView
+        android:id="@+id/amount_of_views"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_barrier"
+        tools:text="@sample/posts.json/data/views" />
 
     <ImageButton
         android:id="@+id/views"
-        android:layout_width="@dimen/avatar_view_size"
-        android:layout_height="@dimen/avatar_view_size"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/views_button"
-        app:layout_constraintEnd_toStartOf="@id/viewsCount"
-        app:layout_constraintTop_toBottomOf="@id/message"
-        app:srcCompat="@drawable/ic_baseline_visibility_24" />
-
-    <TextView
-        android:id="@+id/viewsCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="@id/views"
-        app:layout_constraintEnd_toEndOf="@id/message"
-        app:layout_constraintTop_toTopOf="@id/views" />
+        android:layout_marginTop="@dimen/common_spacing"
+        android:layout_marginEnd="@dimen/common_spacing_8dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/description_views"
+        android:src="@drawable/ic_baseline_remove_red_eye_24"
+        app:layout_constraintEnd_toStartOf="@id/amount_of_views"
+        app:layout_constraintTop_toBottomOf="@id/content_barrier"
+        tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
