--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="big_common_spacing">16dp</dimen>
-    <dimen name="small_common_spacing">8dp</dimen>
-    <dimen name="avatar_view_size">48dp</dimen>
-    <dimen name="icon_size">24dp</dimen>
+    <dimen name="common_spacing">16dp</dimen>
+    <dimen name="posts_avatar_size">48dp</dimen>
+    <dimen name="common_spacing_8dp">8dp</dimen>
 </resources>
