--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="common_spacing">16dp</dimen>
     <dimen name="posts_avatar_size">48dp</dimen>
     <dimen name="common_spacing_8dp">8dp</dimen>
+    <dimen name="icon_button_min_size">48dp</dimen>
 </resources>
