--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.NMedia" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -29,20 +29,6 @@
     </style>
 
     <style name="Widget.AppTheme.OptionsButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
-        <item name="icon">@drawable/ic_options_24dp</item>
-        <item name="iconTint">?attr/colorControlNormal</item>
-        <item name="android:minWidth">@dimen/icon_button_min_size</item>
-        <item name="android:minHeight">@dimen/icon_button_min_size</item>
-    </style>
-
-    <style name="Widget.AppTheme.OptionsButton" parent="Widget.MaterialComponents.Button.TextButton.Icon" tools:ignore="DuplicateDefinition">
-        <item name="icon">@drawable/ic_options_24dp</item>
-        <item name="iconTint">?attr/colorControlNormal</item>
-        <item name="android:minWidth">@dimen/icon_button_min_size</item>
-        <item name="android:minHeight">@dimen/icon_button_min_size</item>
-    </style>
-
-    <style name="Widget.AppTheme.OptionsButton" parent="Widget.MaterialComponents.Button.TextButton.Icon" tools:ignore="DuplicateDefinition">
         <item name="icon">@drawable/ic_options_24dp</item>
         <item name="iconTint">?attr/colorControlNormal</item>
         <item name="android:minWidth">@dimen/icon_button_min_size</item>
