--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,126 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/posts_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/tools_top_barrier"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="-58dp"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="170dp"
         tools:listitem="@layout/post_list_item" />
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/tools_top_barrier"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="" />
-
-    <EditText
-        android:id="@+id/content_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:hint="@string/post_text"
-        android:importantForAutofill="no"
-        android:inputType="textMultiLine"
-        android:padding="@dimen/common_spacing"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/save_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tools_top_barrier" />
-
-    <ImageButton
-        android:id="@+id/save_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/save"
-        android:src="@drawable/ic_save_48"
+        android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/add_post"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/content_edit_text" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="edit_icon, edit_top_text, short_text_content, cancel_button"
-        tools:visibility="visible" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/bottom_edit_barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="top" />
-
-    <ImageView
-        android:id="@+id/edit_icon"
-        android:layout_width="47dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="@dimen/common_spacing_8dp"
-        android:background="@android:color/white"
-        android:contentDescription="@string/editImage"
-        android:paddingStart="@dimen/common_spacing"
-        android:paddingTop="@dimen/common_spacing_8dp"
-        android:paddingEnd="@dimen/common_spacing_8dp"
-        android:paddingBottom="@dimen/common_spacing_8dp"
-        app:layout_constraintBottom_toTopOf="@id/tools_top_barrier"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bottom_edit_barrier"
-        app:srcCompat="@drawable/ic_baseline_create_24" />
-
-    <TextView
-        android:id="@+id/edit_top_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:text="@string/edit_message"
-        android:textColor="#1498b8"
-        android:textStyle="bold"
-        android:paddingStart="@dimen/common_spacing_8dp"
-        android:paddingEnd="@dimen/common_spacing_8dp"
-        app:layout_constraintBottom_toTopOf="@id/short_text_content"
-        app:layout_constraintStart_toEndOf="@id/edit_icon"
-        app:layout_constraintTop_toBottomOf="@id/bottom_edit_barrier"
-        app:layout_constraintTop_toTopOf="@id/edit_icon"
-        app:layout_constraintEnd_toStartOf="@id/cancel_button"/>
-
-    <TextView
-        android:id="@+id/short_text_content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:paddingStart="@dimen/common_spacing_8dp"
-        android:paddingEnd="@dimen/common_spacing_8dp"
-        android:paddingBottom="@dimen/common_spacing_8dp"
-        app:layout_constraintStart_toEndOf="@id/edit_icon"
-        app:layout_constraintTop_toBottomOf="@id/edit_top_text"
-        app:layout_constraintEnd_toStartOf="@id/cancel_button"
-        tools:text="Part of message" />
-
-    <ImageButton
-        android:id="@+id/cancel_button"
-        android:layout_width="53dp"
-        android:layout_height="49dp"
-        android:background="@color/white"
-        android:contentDescription="@string/cancelEditButton"
-        android:paddingStart="10dp"
-        android:paddingEnd="8dp"
-        android:src="@drawable/ic_baseline_close_24"
-        app:layout_constraintBottom_toTopOf="@id/tools_top_barrier"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bottom_edit_barrier"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:srcCompat="@drawable/ic_add_24dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
