--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.NMedia" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -10,29 +10,43 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l" tools:ignore="ObsoleteSdkInt">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Widget.AppTheme.LikeCheckBox" parent="Widget.MaterialComponents.Button.TextButton.Icon">
-        <item name="icon">@drawable/ic_like_24dp</item>
+    <style name="Widget.AppTheme.LikeButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
         <item name="iconTint">@color/like_checkbox_tint</item>
-        <item name="android:minWidth">@dimen/icon_button_min_size</item>
-        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="android:textColor">?attr/colorControlNormal</item>
+        <item name="rippleColor">@android:color/transparent</item>
+        <item name="minHeight">@dimen/icon_button_min_size</item>
+        <item name="minWidth">@dimen/icon_button_min_size</item>
     </style>
 
     <style name="Widget.AppTheme.ShareButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
-        <item name="icon">@drawable/ic_baseline_share_24</item>
         <item name="iconTint">?attr/colorControlNormal</item>
-        <item name="android:minWidth">@dimen/icon_button_min_size</item>
-        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="android:textColor">?attr/colorControlNormal</item>
+        <item name="minHeight">@dimen/icon_button_min_size</item>
+        <item name="minWidth">@dimen/icon_button_min_size</item>
     </style>
 
     <style name="Widget.AppTheme.OptionsButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
-        <item name="icon">@drawable/ic_options_24dp</item>
         <item name="iconTint">?attr/colorControlNormal</item>
-        <item name="android:minWidth">@dimen/icon_button_min_size</item>
-        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="backgroundTint">@color/options_background_tint</item>
+        <item name="android:textColor">?attr/colorControlNormal</item>
+        <item name="iconPadding">0dp</item>
+        <item name="minHeight">@dimen/icon_button_min_size</item>
+        <item name="minWidth">@dimen/icon_button_min_size</item>
+    </style>
+
+    <style name="Widget.AppTheme.PlayButton" parent="Widget.MaterialComponents.Button.Icon">
+        <item name="iconTint">@color/white</item>
+        <item name="backgroundTint" >?attr/colorControlNormal</item>
+        <item name="android:textColor">?attr/colorControlNormal</item>
+        <item name="iconPadding">0dp</item>
+        <item name="minHeight">@dimen/icon_button_min_size</item>
+        <item name="minWidth">@dimen/icon_button_min_size</item>
     </style>
 
 </resources>
